--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -122,7 +122,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="" href="/dashboard"><span class="navbar-brand"><span class="fa fa-paper-plane"></span> proBooks</span></a></div>
+      <a class="" href="/dashboard"><span class="navbar-brand"><span class="fa fa-book"></span> ProBooks</span></a></div>
 
     <div class="navbar-collapse collapse" style="height: 1px;">
       <ul id="main-menu" class="nav navbar-nav navbar-right">
