--- a/app/views/students/dashboard.rhtml
+++ b/app/views/students/dashboard.rhtml
@@ -26,8 +26,8 @@
                   Book title: <a href="#"><%= book.title %></a><br />
                   Authors: <a href="#"><%= book.author %></a></p>
                 <p>Subscribed By: <span class="label label-success"><%= book.users.count %></span></p>
-                <button onclick="viewBook('<%= book.book_id %>', '<%= book.title %>', '<%= book.author %>')" class="btn btn-primary"><i class="fa fa-eye"></i> Browse Book</button>
-                <button onclick="removeBookConfirm('<%= book.book_id %>')" class="btn pull-right btn-danger"><i class="fa fa-eye"></i> Delete</button>
+                <button onclick="viewBook('<%= book.book_id %>', '<%= book.title %>', '<%= book.author %>')" class="btn btn-default"><i class="fa fa-eye"></i> Browse Book</button>
+                <button style="width: 200px;" onclick="removeBookConfirm('<%= book.book_id %>')" class="btn pull-right btn-default"><i class="fa fa-cut"></i> Remove From Shelf</button>
               </div>
             </div>
           </li>
