--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -151,11 +151,12 @@
 
   <div class="sidebar-nav">
     <ul>
-      <li><a href="#" data-target=".dashboard-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-fw fa-dashboard"></i> Bookshelf<i class="fa fa-collapse"></i></a></li>
+      <li><a href="#" data-target=".dashboard-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-fw fa-folder"></i> Menu<i class="fa fa-collapse"></i></a></li>
       <li>
         <ul class="dashboard-menu nav nav-list collapse">
-          <li><a href="#"><span class="fa fa-caret-right"></span> Add book</a></li>
-          <li ><a href=#"><span class="fa fa-caret-right"></span> Remove Book</a></li>
+          <li><a href="/dashboard"><span class="fa fa-caret-right"></span> Bookshelf</a></li>
+          <li ><a href="/select_books_from_store"><span class="fa fa-caret-right"></span> Book Store</a></li>
+          <li ><a href="/my_account"><span class="fa fa-caret-right"></span> My Account</a></li>
         </ul>
       </li>
     </ul>
@@ -227,8 +228,8 @@
               <button class="btn btn-block"> <b>Menu</b> </button>
               <button onclick="goToBookShelf();" class="btn btn-info btn-block" onclick=""> Book Shelf </button>
               <button onclick="goToBookStore();" class="btn btn-primary btn-block" onclick=""> Bookstore</button>
-              <button onclick="goToRecentBooks();" class="btn btn-info btn-block" onclick=""> Recent Books </button>
-              <button onclick="goToExtras();" class="btn btn-success btn-block" onclick=""> Extras </button>
+              <!--<button onclick="goToRecentBooks();" class="btn btn-info btn-block" onclick=""> Recent Books </button>
+              <button onclick="goToExtras();" class="btn btn-success btn-block" onclick=""> Extras </button>-->
             </div>
           </div>
         </div>
