--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -138,7 +138,7 @@
             <li class="dropdown-header">My Panel</li>
             <li><a href="/select_books_from_store">Book Store</a></li>
             <li><a href="/dashboard">Book Shelf</a></li>
-            <li><a tabindex="-1" href="#">Readers Digest</a></li>
+            <!--<li><a tabindex="-1" href="#">Readers Digest</a></li>-->
             <li class="divider"></li>
             <li><a tabindex="-1" href="/logout">Logout</a></li>
           </ul>
