--- a/app/views/students/my_account.rhtml
+++ b/app/views/students/my_account.rhtml
@@ -5,32 +5,32 @@
       <tbody>
         <tr>
           <th>First Name</th>
-          <td><a href="#"><%= @user.first_name %></a></td>
+          <td><a href="#" onclick="showModalPopup('first_name', 'First Name')" ><%= @user.first_name %></a></td>
           <td><button onclick="showModalPopup('first_name', 'First Name')" class="btn btn-success btn-block"> Edit </button></td>
         </tr>
         <tr>
           <th>Last Name</th>
-          <td><a href="#"><%= @user.last_name %></a></td>
+          <td><a href="#" onclick="showModalPopup('last_name', 'Last Name')"><%= @user.last_name %></a></td>
           <td><button onclick="showModalPopup('last_name', 'Last Name')" class="btn btn-success btn-block"> Edit </button></td>
         </tr>
         <tr>
           <th>Phone #</th>
-          <td><a href="#"><%= @user.phone_number %></a></td>
+          <td><a href="#" onclick="showModalPopup('phone', 'Phone')"><%= @user.phone_number %></a></td>
           <td><button onclick="showModalPopup('phone', 'Phone')" class="btn btn-success btn-block"> Edit </button></td>
         </tr>
         <tr>
           <th>E-mail</th>
-          <td><a href="#"><%= @user.email %></a></td>
+          <td><a href="#" onclick="showModalPopup('email', 'E-mail')"><%= @user.email %></a></td>
           <td><button onclick="showModalPopup('email', 'E-mail')" class="btn btn-success btn-block"> Edit </button></td>
         </tr>
         <tr>
           <th>Username</th>
-          <td><a href="#"><%= @user.username %></a></td>
+          <td><a href="#" onclick="showModalPopup('username', 'Username')"><%= @user.username %></a></td>
           <td><button onclick="showModalPopup('username', 'Username')" class="btn btn-success btn-block" onclick=""> Edit </button></td>
         </tr>
         <tr>
           <th>Password</th>
-          <td><a href="#">********</a></td>
+          <td><a href="#" onclick="showModalPopup('password', 'Password')">********</a></td>
           <td><button onclick="showModalPopup('password', 'Password')" class="btn btn-success btn-block" onclick=""> Edit </button></td>
         </tr>
       </tbody>
