--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -149,6 +149,14 @@
     .well{
       border-radius: 10px;
     }
+
+    .notes-header{
+      position: relative;
+      top: -18px;
+      left: 40%;
+    }
+
+    
   </style>
 
 
@@ -223,6 +231,21 @@
         </ul>
       </li>
     </ul>
+    <div style="padding-left: 5px; width: 98%;">
+      <div class="well well-large" style="border-radius: 0px; min-height: 120px;">
+        <b class="notes-header">Notes </b>
+
+      </div>
+      <span class="pull-right" style="position: relative; bottom:  50px; padding-right: 5px;"><a href="#"><i class="fa fa-plus "></i> New Note</a></span>
+    </div>
+    <div style="padding-left: 5px; width: 98%;">
+      <div class="well well-large" style="border-radius: 0px; min-height: 120px;">
+        <b class="notes-header">Apps </b>
+        <button class="btn btn-primary btn-block" style="line-height: 0.7;"><span class="fa fa-facebook"></span> Facebook </button>
+        <button class="btn btn-primary btn-block" style="line-height: 0.7;"><span class="fa fa-twitter"></span> Twitter </button>
+        <button class="btn btn-primary btn-block" style="line-height: 0.7;"><span class="fa fa-wechat"></span> We Chatt </button>
+      </div>
+    </div>
   </div>
 
   <div class="content">
@@ -334,43 +357,44 @@
 
 
     </div>
+  </div>
 
-    <script src="/AircraftAdminFree/lib/bootstrap/js/bootstrap.js"></script>
-    <script type="text/javascript">
-      $(function() {
-        var uls = $('.sidebar-nav > ul > *').clone();
-        uls.addClass('visible-xs');
-        $('#main-menu').append(uls.clone());
-      });
+  <script src="/AircraftAdminFree/lib/bootstrap/js/bootstrap.js"></script>
+  <script type="text/javascript">
+    $(function() {
+      var uls = $('.sidebar-nav > ul > *').clone();
+      uls.addClass('visible-xs');
+      $('#main-menu').append(uls.clone());
+    });
 
-    </script>
-    <script type="text/javascript">
-      $("[rel=tooltip]").tooltip();
+  </script>
+  <script type="text/javascript">
+    $("[rel=tooltip]").tooltip();
 
-      function goToBookShelf(){
-        window.location = "/dashboard";
-      }
-      function goToBookStore(){
-        window.location = "/select_books_from_store";
-      }
+    function goToBookShelf(){
+      window.location = "/dashboard";
+    }
+    function goToBookStore(){
+      window.location = "/select_books_from_store";
+    }
 
-      function goToRecentBooks(){
-        window.location = "/my_recent_books_menu";
-      }
+    function goToRecentBooks(){
+      window.location = "/my_recent_books_menu";
+    }
 
-      function goToExtras(){
-        window.location = "/extras";
-      }
+    function goToExtras(){
+      window.location = "/extras";
+    }
 
-      $("#viewBook").draggable({
-        handle: ".modal-header"
-      });
+    $("#viewBook").draggable({
+      handle: ".modal-header"
+    });
 
-      function submitSearchForm(){
-        $('#general-search-form').submit();
-      }
+    function submitSearchForm(){
+      $('#general-search-form').submit();
+    }
 
-    </script>
+  </script>
 
 
-  </body></html>
+</body></html>
