--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -156,7 +156,29 @@
       left: 40%;
     }
 
-    
+    .btn-circle.btn-xl {
+      border-radius: 35px;
+      font-size: 24px;
+      height: 60px;
+      line-height: 1.33;
+      padding: 10px 16px;
+      width: 60px;
+    }
+    .btn-circle {
+      border-radius: 15px;
+      font-size: 12px;
+      height: 30px;
+      line-height: 1.42857;
+      padding: 6px 0;
+      text-align: center;
+      width: 30px;
+    }
+    .btn-circle {
+      border-radius: 500px;
+      height: 40px;
+      padding: 8px 10px;
+      width: 40px;
+    }
   </style>
 
 
@@ -290,6 +312,23 @@
         </div>
       </div>
     </div><br />
+
+    <div class="row" style="padding-right: 64px; top: -36px; position: relative;">
+      
+      <button class="btn btn-default btn-circle btn-xl pull-right" type="button" >
+        <i class="glyphicon glyphicon-time"></i>
+      </button>
+
+      <button class="btn btn-default btn-circle btn-xl pull-right" type="button" style="margin-right: 10px;">
+        <i class="glyphicon glyphicon-search"></i>
+      </button>
+      
+      <button class="btn btn-default btn-circle btn-xl pull-right" type="button" style="margin-right: 10px;">
+        <i class="glyphicon glyphicon-folder-open"></i>
+      </button>
+      <br /><br /><br />
+    </div>
+
     <div class="main-content">
       <div class="faq-content">
 
