--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -273,7 +273,7 @@
         <b class="notes-header">Notes </b>
 
       </div>
-      <span class="pull-right" style="position: relative; bottom:  50px; padding-right: 5px;"><a href="#"><i class="fa fa-plus "></i> New Note</a></span>
+      <span class="pull-right" style="position: relative; bottom:  50px; padding-right: 5px;"><a href="#" onclick="return showNewNotesPopup();"><i class="fa fa-plus"></i> New Note</a></span>
     </div>
     <div style="padding-left: 5px; width: 98%;">
       <div class="well well-large" style="border-radius: 0px; min-height: 120px;">
@@ -432,7 +432,33 @@
       </div>
 
 
+      <div class="col-lg-12">
+        <div class="modal fade" id="newNotes" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+                <h4 class="modal-title" id="H4"> <b id="field-title">Notes</b></h4>
+              </div>
+              <div class="modal-body">
+                <form action="#" role="form" class="form-horizontal" method="POST">
+                  <div class="form-group">
+                    <div>
+                      <textarea class="form-control" rows="10" name="notes"></textarea>
+                    </div>
+                  </div>
+                </form>
+              </div>
 
+              <div class="modal-footer">
+                <button data-dismiss="modal" class="btn btn-default" type="button">Close</button>
+                <button class="btn btn-primary" type="button">Save changes</button>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
@@ -487,6 +513,12 @@
     }
 
     changeTextColor();
+
+    function showNewNotesPopup(){
+      jQuery('#newNotes').modal('show');
+      return false;
+    }
+    
   </script>
 
 
