--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -441,7 +441,7 @@
                 <h4 class="modal-title" id="H4"> <b id="field-title">Notes</b></h4>
               </div>
               <div class="modal-body">
-                <form action="#" role="form" class="form-horizontal" method="POST">
+                <form action="/students/save_user_notes" role="form" class="form-horizontal" method="POST" id="userNotesForm">
                   <div class="form-group">
                     <div>
                       <textarea class="form-control" rows="10" name="notes"></textarea>
@@ -452,7 +452,7 @@
 
               <div class="modal-footer">
                 <button data-dismiss="modal" class="btn btn-default" type="button">Close</button>
-                <button class="btn btn-primary" type="button">Save changes</button>
+                <button class="btn btn-primary" type="button" onclick="saveUserNotes();">Save changes</button>
               </div>
               
             </div>
@@ -518,7 +518,10 @@
       jQuery('#newNotes').modal('show');
       return false;
     }
-    
+
+    function saveUserNotes(){
+      jQuery("#userNotesForm").submit();
+    }
   </script>
 
 
