Headlines and Updates

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -185,6 +185,43 @@
               <li class=""><a href="/remove_faculties_menu"><i class="icon-angle-right"></i> Remove Faculties </a></li>
             </ul>
           </li>
+
+          <li class="panel ">
+            <a href="#" data-parent="#menu" data-toggle="collapse" class="accordion-toggle" data-target="#headlines-nav">
+              <i class="icon-indent-left"> </i>Manage Headlines
+
+              <span class="pull-right">
+                <i class="icon-angle-left"></i>
+              </span>
+              &nbsp; <span class="label label-info">4</span>&nbsp;
+            </a>
+            <ul class="collapse" id="headlines-nav">
+
+              <li class=""><a href="/new_headlines_menu"><i class="icon-angle-right"></i> New Headline </a></li>
+              <li class=""><a href="/edit_headlines_menu"><i class="icon-angle-right"></i> Edit Headlines </a></li>
+              <li class=""><a href="/view_headlines_menu"><i class="icon-angle-right"></i> View Headlines </a></li>
+              <li class=""><a href="/remove_headlines_menu"><i class="icon-angle-right"></i> Remove Headlines </a></li>
+            </ul>
+          </li>
+
+          <li class="panel ">
+            <a href="#" data-parent="#menu" data-toggle="collapse" class="accordion-toggle" data-target="#updates-nav">
+              <i class="icon-refresh"> </i>Manage Updates
+
+              <span class="pull-right">
+                <i class="icon-angle-left"></i>
+              </span>
+              &nbsp; <span class="label label-info">4</span>&nbsp;
+            </a>
+            <ul class="collapse" id="updates-nav">
+
+              <li class=""><a href="/new_updates_menu"><i class="icon-angle-right"></i> New Update </a></li>
+              <li class=""><a href="/edit_updates_menu"><i class="icon-angle-right"></i> Edit Updates </a></li>
+              <li class=""><a href="/view_updates_menu"><i class="icon-angle-right"></i> View Updates </a></li>
+              <li class=""><a href="/remove_updates_menu"><i class="icon-angle-right"></i> Remove Updates </a></li>
+            </ul>
+          </li>
+
           <li class="panel ">
             <a href="#" data-parent="#menu" data-toggle="collapse" class="accordion-toggle" data-target="#users-nav">
               <i class="icon-user"> </i>Manage Users
