--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -43,12 +43,12 @@
     <!-- PAGE LEVEL STYLES -->
     <link href="/assets/css/layout2.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="assets/plugins/Font-Awesome/css/font-awesome.css" />
-    <link rel="stylesheet" href="assets/plugins/wysihtml5/dist/bootstrap-wysihtml5-0.0.2.css" />
-    <link rel="stylesheet" href="assets/css/Markdown.Editor.hack.css" />
-    <link rel="stylesheet" href="assets/plugins/CLEditor1_4_3/jquery.cleditor.css" />
-    <link rel="stylesheet" href="assets/css/jquery.cleditor-hack.css" />
-    <link rel="stylesheet" href="assets/css/bootstrap-wysihtml5-hack.css" />
+    <link rel="stylesheet" href="/assets/plugins/Font-Awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="/assets/plugins/wysihtml5/dist/bootstrap-wysihtml5-0.0.2.css" />
+    <link rel="stylesheet" href="/assets/css/Markdown.Editor.hack.css" />
+    <link rel="stylesheet" href="/assets/plugins/CLEditor1_4_3/jquery.cleditor.css" />
+    <link rel="stylesheet" href="/assets/css/jquery.cleditor-hack.css" />
+    <link rel="stylesheet" href="/assets/css/bootstrap-wysihtml5-hack.css" />
     <!-- END PAGE LEVEL  STYLES -->
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
